# Geant4-practice

./: CMakeLists.txt  README.md  RunAction.cc  RunAction.hh  action.cc  action.hh  construction.cc  construction.hh  detecto.cc  detecto.hh  detector copy1.cc  detector copy1.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  sim.cc  stepping_action.cc  stepping_action.hh
.VSCodeCounter/2023-02-04_22-07-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
